# chatbot

./: README.md  chat.db  pyproject.toml
app/: app.py  database.py  models.py
chatroom_rest_api_collection/: Create a chatroom.bru  Fetches messages in a chatroom.bru  Get users in a room.bru  List chatrooms.bru  Send Message.bru  bruno.json
test/: test_events.py
